Minor editing of app info

--- a/WpfApp/WpfApp.csproj
+++ b/WpfApp/WpfApp.csproj
@@ -8,11 +8,11 @@
     <AssemblyName>MyToDoBoard</AssemblyName>
     <RootNamespace>MyToDoBoard</RootNamespace>
     <ApplicationIcon>MyToDoBoard.ico</ApplicationIcon>
-    <Title>My personal ToDo Board</Title>
+    <Title>My Personal ToDo Board</Title>
     <Version>0.1.0</Version>
     <Authors>SGrottel</Authors>
-    <Description>A personal ToDo Board, local, offline, non-shared.</Description>
-    <Copyright>Copyright 2022, by SGrottel</Copyright>
+    <Description>A personal ToDo Board, local, offline, non-shared, file-based.</Description>
+    <Copyright>Copyright 2022-2023, by SGrottel</Copyright>
     <PackageProjectUrl>https://go.grottel.net/MyToDoBoard</PackageProjectUrl>
     <RepositoryUrl>https://github.com/sgrottel/MyToDoBoard.git</RepositoryUrl>
     <PackageTags>todolist;offline;kanban</PackageTags>
