--- a/Report/Report.csproj
+++ b/Report/Report.csproj
@@ -14,4 +14,9 @@
     <Copyright>Copyright, SGrottel</Copyright>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    <PackageReference Include="YamlDotNet" Version="13.2.0" />
+  </ItemGroup>
+
 </Project>
