--- a/LibStaticDataModel/LibStaticDataModel.csproj
+++ b/LibStaticDataModel/LibStaticDataModel.csproj
@@ -1,4 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="..\Version.proj" />
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -6,6 +7,8 @@
     <Nullable>enable</Nullable>
     <AssemblyName>MyToDo.StaticDataModel</AssemblyName>
     <RootNamespace>MyToDo.StaticDataModel</RootNamespace>
+    <EnableSourceControlManagerQueries>false</EnableSourceControlManagerQueries>
+    <Title>MyToDoBoard Data Model Library</Title>
   </PropertyGroup>
 
   <ItemGroup>
